--- a/kmd-saj/package.json
+++ b/kmd-saj/package.json
@@ -16,10 +16,10 @@
     "@angular/compiler": "~13.2.0",
     "@angular/core": "~13.2.0",
     "@angular/forms": "~13.2.0",
+    "@angular/material": "^13.3.2",
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
-    "@nrwl/angular": "13.9.7",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
@@ -32,6 +32,8 @@
     "@angular/cli": "~13.2.0",
     "@angular/compiler-cli": "~13.2.0",
     "@angular/language-service": "~13.2.0",
+    "@faker-js/faker": "^6.1.2",
+    "@nrwl/angular": "13.9.7",
     "@nrwl/cli": "13.9.7",
     "@nrwl/cypress": "13.9.7",
     "@nrwl/eslint-plugin-nx": "13.9.7",
