--- a/kmd-saj/tsconfig.base.json
+++ b/kmd-saj/tsconfig.base.json
@@ -19,6 +19,7 @@
       "@kmd-saj/applicant-details": ["libs/applicant-details/src/index.ts"],
       "@kmd-saj/manager-favorites": ["libs/manager-favorites/src/index.ts"],
       "@kmd-saj/state-management": ["libs/state-management/src/index.ts"],
+      "@kmd-saj/state-management/*": ["libs/state-management/src/lib/*"],
       "@kmd-saj/summary-results": ["libs/summary-results/src/index.ts"]
     }
   },
